--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,7 @@
 <script src="js/controllers_courses.js"></script>
 <script src="js/services.js"></script>
 <script src="js/forgestorewebapp.js"></script>
+<script src="js/config.js"></script>
 
 
 
