--- a/src/UserAdd.html
+++ b/src/UserAdd.html
@@ -4,7 +4,7 @@
 			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 				<h1 id="headerTitle">Add new User</h1>
 
-				<form name="form" class="form-horizontal" role="form" ng-submit="addBakerUser()" id="addUserForm">
+				<form name="form" class="form-horizontal" role="form" ng-submit="addFStoreUser()" id="addUserForm">
 					<input type="hidden" name="userid" value="" />
 					<div class="form-group">
 						<label for="fstoreuser.name" class="col-sm-2 control-label">Name</label>
