some filtering changes on categories

--- a/src/CoursesMarketplace.html
+++ b/src/CoursesMarketplace.html
@@ -9,7 +9,7 @@
 							class="badge pull-right">{{coursesTotalNumber}}</span> All
 					</a></li>
 					<li ng-class="{'active': isActive(category), 'shadowed-dark': isActive(category) }" 
-						ng-repeat="category in categories "><a ng-click="filterCategory(category)"> <span
+						ng-repeat="category in categories "  ng-if="category.coursescount > 0"><a ng-click="filterCategory(category)"> <span
 							class="badge pull-right">{{category.coursescount}}</span>{{category.name}}
 					</a></li>
 				</ul>
